[package]
name = "kiezpilz_etl"
version = "0.1.0"
authors = ["notplants <mfowler.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
chrono = "0.4"
chrono-tz = "0.5"
